Fix #25775: crash using border render from external render engines, merging back the tile used wrong offsets.